<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ContactViewActivity"
    tools:showIn="@layout/activity_contact_view">

    <FrameLayout
        android:id="@+id/fl_avatar_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_avatar_size">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:contentDescription="@string/desc_avatar_background" />

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/contact_avatar_size"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_contact_avatar"
            tools:src="@drawable/ic_person_white_24dp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fl_avatar_holder"
        android:orientation="vertical">
        <!-- name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                tools:text="Name" />
        </LinearLayout>

        <!-- last name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                tools:text="LastName"/>
        </LinearLayout>

        <!-- phone -->
        <RelativeLayout
            android:id="@+id/rl_phone_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/padding_medium">
            <LinearLayout
                android:id="@+id/ll_phone_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_phone"
                    android:src="@drawable/ic_call_black_24dp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:layout_toEndOf="@id/iv_call"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="8 025 222 105" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_sms_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:text="@string/send_sms"/>
                <ImageView
                    android:id="@+id/iv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/desc_message"
                    android:src="@drawable/ic_message_black_24dp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- email -->
        <LinearLayout
            android:id="@+id/ll_email_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_email"
                android:src="@drawable/ic_email_black_24dp"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                android:textSize="@dimen/text_size_medium"
                tools:text="login@example.com" />
        </LinearLayout>

        <!-- address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_medium"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_location"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                android:textSize="@dimen/text_size_medium"
                tools:text="Some Sample Address 12" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>