<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SmsActivity"
    tools:showIn="@layout/activity_sms">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_write_message_holder">

        <TextView
            android:id="@+id/tv_no_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_no_messages"
            android:textSize="@dimen/text_size_big"
            android:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scrollbars="vertical"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_write_message_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/padding_medium">

        <ImageButton
            android:id="@+id/ib_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/desc_send"
            android:src="@drawable/ic_send_black_24dp"/>

        <EditText
            android:id="@+id/et_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_toStartOf="@id/ib_send_message"
            android:hint="@string/hint_send_message"
            android:inputType="textMultiLine|textCapSentences"/>
    </RelativeLayout>
</RelativeLayout>